# webchecker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging.conf  main.py  main_writer.py  pyproject.toml
src/: checker.py  logger.py  scheduler.py  writer.py
webchecker/: checker.py  scheduler.py  settings.py  transport.py
webchecker/checker/: checker.py  transport.py  worker.py
webchecker/tests/: test_scheduler.py  test_transport.py
webchecker/tests/checker/: test_trasnport.py
webchecker/writer/: db.py  models.py  worker.py  writer.py
