[tool.poetry]
name = "web-checker"
version = "0.1.0"
description = ""
authors = ["hshafy <hshafy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
kafka-python = "^2.0.1"
psycopg2 = "^2.8.5"
validators = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
